Updated gateway, started to update assembler, Adjust naming in proto services
